Fix various windows related URI test failures ()